--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=root
-spring.datasource.password=Guitare512$
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/XXXXXXXX
+spring.datasource.username=XXXXX
+spring.datasource.password=XXXXXXXXXXXX
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
-#spring.sql.init.mode=always
-#spring.jpa.show-sql: true
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-#spring.datasource.username=root
-#spring.datasource.password=Guitare512$
